--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.devtools.livereload.enabled=true
 
 spring.thymeleaf.cache=false
+
+spring.servlet.multipart.max-file-size=20MB
+
+spring.servlet.multipart.max-request-size=100MB
+
+itemImgLocation=C:/shop/item
+
+uploadPath=file:///C:/shop
+
