--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.devtools.livereload.enabled=true
 
 spring.thymeleaf.cache=false
@@ -20,5 +20,5 @@ spring.servlet.multipart.max-request-size=100MB
 
 itemImgLocation=C:/shop/item
 
-uploadPath=file:///C:/shop
+uploadPath=file:///C:/shop/item
 
